--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,13 @@ src/*.lst
 src/*.sym
 src/*.rel
 font/font
-convert/convert
-hex2bin/hex2bin
-namebin/namebin
-relink/relink
-reversion/reversion
+tool/convert/convert
+tool/hex2bin/hex2bin
+tool/namebin/namebin
+tool/relink/relink
+tool/reversion/reversion
+src/linkmain_unix.lnk
+src/*.bin
+src/*.ihx
+src/*.map
+src/*.noi
